deploy/ssh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slurm-login-sshproxy
  namespace: slurm
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/instance: slurm
    app.kubernetes.io/name: login
  type: ClusterIP
