deploy/ssh/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: slurm-login
  namespace: slurm
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: slurm-login-sshproxy
    weight: 100
